<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".NotaEscrita">

    <EditText
        android:id="@+id/txt_bitacora"
        android:layout_width="330dp"
        android:layout_height="496dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtMemo"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#8F8F8F"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#00000000"
        android:contentDescription="@string/btn"
        android:onClick="Guardar"
        android:text="@string/btnGuardar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bitacora" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:background="#00000000"
        android:contentDescription="@string/btn"
        android:onClick="Volver"
        android:text="@string/btnVolver"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bitacora" />
</androidx.constraintlayout.widget.ConstraintLayout>