<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="328dp"
        android:contentDescription="@string/eText"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#8C8C8C"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="255dp"
        android:contentDescription="@string/eText"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:password="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#818181"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInicio"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="186dp"
        android:background="#00000000"
        android:contentDescription="@string/btn"
        android:onClick="iniciar"
        android:text="@string/inicio"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="66dp"
        android:background="#00000000"
        android:contentDescription="@string/btn"
        android:onClick="registrarse"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:contentDescription="@string/imagen"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</RelativeLayout>