<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".MainActivity_abm">

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textColor="#FFFFFF"
        android:textColorHint="#818181"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:textColor="#FFFFFF"
        android:textColorHint="#818181"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_password" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="#FFFFFF"
        android:textColorHint="#818181"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="181dp"
        android:layout_marginRight="181dp"
        android:background="#00000000"
        android:contentDescription="@string/btnRegistrar"
        android:onClick="registrar"
        android:text="@string/btnRegistrar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#00000000"
        android:contentDescription="@string/btnEliminar"
        android:onClick="eliminar"
        android:text="@string/btnEliminar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonRegistrar" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:background="#37EFEFEF"
        android:onClick="buscar"
        android:text="@string/btnBuscar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonEliminar" />

</androidx.constraintlayout.widget.ConstraintLayout>